增加静态库编译的设置，设置C99而不是C2011

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.17)
 project(hiredis_vip C)
 
-set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD 99)
 
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O2")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS} -O0 -Wall -g -ggdb")
@@ -20,38 +20,73 @@ link_directories("/usr/lib64")
 link_directories("/usr/lib")
 include_directories(.)
 
-add_executable(${PROJECT_NAME}
-        testCluster.c
-        adapters/ae.h
-        adapters/glib.h
-        adapters/libev.h
-        adapters/libevent.h
-        adapters/libuv.h
-        adlist.c
-        adlist.h
-        async.c
-        async.h
-        command.c
-        command.h
-        crc16.c
-        dict.c
-        dict.h
-        fmacros.h
-        hiarray.c
-        hiarray.h
-        hircluster.c
-        hircluster.h
-        hiredis.c
-        hiredis.h
-        hiutil.c
-        hiutil.h
-        net.c
-        net.h
-        read.c
-        read.h
-        sds.c
-        sds.h
-        win32.h)
+IF (1)
+    add_executable(${PROJECT_NAME}
+            testCluster.c
+            adapters/ae.h
+            adapters/glib.h
+            adapters/libev.h
+            adapters/libevent.h
+            adapters/libuv.h
+            adlist.c
+            adlist.h
+            async.c
+            async.h
+            command.c
+            command.h
+            crc16.c
+            dict.c
+            dict.h
+            fmacros.h
+            hiarray.c
+            hiarray.h
+            hircluster.c
+            hircluster.h
+            hiredis.c
+            hiredis.h
+            hiutil.c
+            hiutil.h
+            net.c
+            net.h
+            read.c
+            read.h
+            sds.c
+            sds.h
+            win32.h)
+ELSE ()
+    add_library(${PROJECT_NAME} STATIC
+            testCluster.c
+            adapters/ae.h
+            adapters/glib.h
+            adapters/libev.h
+            adapters/libevent.h
+            adapters/libuv.h
+            adlist.c
+            adlist.h
+            async.c
+            async.h
+            command.c
+            command.h
+            crc16.c
+            dict.c
+            dict.h
+            fmacros.h
+            hiarray.c
+            hiarray.h
+            hircluster.c
+            hircluster.h
+            hiredis.c
+            hiredis.h
+            hiutil.c
+            hiutil.h
+            net.c
+            net.h
+            read.c
+            read.h
+            sds.c
+            sds.h
+            win32.h)
+ENDIF ()
 
 IF (APPLE)
     include_directories("/usr/local/include/mysql")
